--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>WD</title>
 
-<link rel="stylesheet" type="text/css" href="../css/style.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 
 </html>
@@ -60,7 +60,7 @@
             <button>More details</button>
         </div>
         <div class="about-model">
-            <img src="../images/IMG_20200910_134542.jpg" alt="model" />
+            <img src="images/IMG_20200910_134542.jpg" alt="model" />
         </div>
     </section>
 
@@ -76,7 +76,7 @@
             <div class="s-box">
                 <div class="s-b-img">
                     <div class="s-type">Food</div>
-                    <img src="../images/IMG_20200910_141349.jpg">
+                    <img src="images/IMG_20200910_141349.jpg">
 
 
                     <div class="s-b-text">
@@ -89,7 +89,7 @@
             <div class="s-box">
                 <div class="s-b-img">
                     <div class="s-type">Haldi-ceremony</div>
-                    <img src="../images/8262c58e3d98e189f6db171df6c70d04.jpg" />
+                    <img src="images/8262c58e3d98e189f6db171df6c70d04.jpg" />
                 </div>
                 <div class="s-b-text">
                     <a href="#"> The Haldi ceremony is a ritual holy bath also known as pithi ceremony, which is one of
@@ -103,7 +103,7 @@
             <div class="s-box">
                 <div class="s-b-img">
                     <div class="s-type">Mehendi-Night</div>
-                    <img src="../images/IMG_20200910_134851.jpg" />
+                    <img src="images/IMG_20200910_134851.jpg" />
 
                     <div class="s-b-text">
                         <a href="#">A romantic way of enhancing the beauty of your bridal look, let's explore the best
@@ -117,7 +117,7 @@
     </section>
 
 
-    <section id="portofolio">
+    <sectin id="portofolio">
 
         <h1 class="p-heading">Protofolio</h1>
 
@@ -129,7 +129,7 @@
                     <h1>The Knot</h1>
                     <p>Mangala-sutra</p>
                 </div>
-                <img src="../images/IMG_20200910_134113.jpg" alt="portofolio">
+                <img src="images/IMG_20200910_134113.jpg" alt="portofolio">
             </div>
 
 
@@ -138,7 +138,7 @@
                     <h1>Couples</h1>
                     <p>Happy faces</p>
                 </div>
-                <img src="../images/IMG_20200910_134623.jpg" alt="portofolio">
+                <img src="images/IMG_20200910_134623.jpg" alt="portofolio">
             </div>
 
             <div class="p-box">
@@ -146,7 +146,7 @@
                     <h1>Wedding</h1>
                     <p>Dinning</p>
                 </div>
-                <img src="../images/IMG_20200910_134210.jpg" alt="portofolio">
+                <img src="images/IMG_20200910_134210.jpg" alt="portofolio">
             </div>
 
 
@@ -155,7 +155,7 @@
         </div>
 
 
-    </section>
+    </sectin>
 
     <section id="Contact-btn">
 
